kube_deploy/Prod/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: experian-bankwizard-service-prod
  labels:
    app: experian-bankwizard-service-app-prod
spec:
  ports:
    - port: 80
      name: http
      targetPort: 3100
  selector:
    app: experian-bankwizard-service-app-prod
