kube_deploy/Prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cica-ingress-prod
  namespace: cica-experian-prod
  annotations:
    nginx.ingress.kubernetes.io/whitelist-source-range: 51.149.2.7/32,5.148.17.54/32,213.107.167.128/32,86.24.170.98/32,217.44.45.195/32,82.33.49.1/32,3.11.28.139/32,3.11.47.107/32
    external-dns.alpha.kubernetes.io/set-identifier: cica-ingress-prod-cica-experian-prod-green
    external-dns.alpha.kubernetes.io/aws-weight: "100"
spec:
  ingressClassName: default
  tls:
    - hosts:
        - cica-experian-prod.apps.live.cloud-platform.service.justice.gov.uk
  rules:
    - host: cica-experian-prod.apps.live.cloud-platform.service.justice.gov.uk
      http:
        paths:
        - path: /
          pathType: ImplementationSpecific
          backend:
            service:
              name: cica-experian-prod
              port:
                number: 80
